recipes gap styles fixed

--- a/src/Components/Recipes/recipes.module.scss
+++ b/src/Components/Recipes/recipes.module.scss
@@ -32,7 +32,7 @@
 .cards {
   display: flex;
   flex-wrap: wrap;
-  padding: 48px 260px;
+  padding: 48px 200px;
   justify-content: space-evenly;
   @include for-mobile-screen {
     justify-content: center;
